docs: polish Spring AI examples